fix layout problem, basic portfolio complete

--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,13 @@
   --clr-dark: #303030;
   --clr-accent: #16e0bd;
 
-  --fs-h1: 3em;
-  --fs-h2: 2.25em;
-  --fs-h3: 1.25em;
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
   --fs-body: 1rem;
 
-  --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 25),
-    0.125em 0.125em 0.25em rgba(0, 0, 0, 15);
+  --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
 
 @media (min-width: 800px) {
@@ -76,7 +76,7 @@ strong {
   color: var(--clr-dark);
   text-decoration: none;
   cursor: pointer;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: var(--fw-bold);
@@ -126,7 +126,7 @@ h3 {
 .section__subtitle--about {
   background: var(--clr-accent);
   padding: 0.25em 1em;
-  font-family: var(--clr-secondary);
+  font-family: var(--ff-secondary);
   margin-bottom: 1em;
 }
 
@@ -281,7 +281,7 @@ header {
 
   .section__subtitle--intro {
     align-self: start;
-    grid-column: -1/1;
+    grid-column: -1 / 1;
     grid-row: 2;
     text-align: right;
     position: relative;
@@ -359,13 +359,13 @@ header {
     grid-area: title;
   }
   .section__subtitle--about {
-    grid-column: 1/-1;
+    grid-column: 1 / -1;
     grid-row: 2;
     position: relative;
     left: -1em;
     width: calc(100% + 2em);
-    padding-left: 2em;
-    padding-right: calc(200%+4em);
+    padding-left: 1em;
+    padding-right: calc(200px + 4em);
   }
   .about-me__img {
     grid-area: img;
@@ -458,5 +458,7 @@ header {
 }
 
 .portfolio-item-individual p {
-  max-width: 800px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
